[gd_scene load_steps=13 format=3 uid="uid://dydhdrddapvey"]

[ext_resource type="Script" path="res://scripts/level_8.gd" id="1_3deuf"]
[ext_resource type="Texture2D" uid="uid://bp6b6gxhculb6" path="res://'art'/roadbg.png" id="3_sk4ja"]
[ext_resource type="PackedScene" uid="uid://we7yb3g0j3wu" path="res://objects/goal.tscn" id="3_w1hoc"]
[ext_resource type="AudioStream" uid="uid://dvfunwt1mp08c" path="res://audio/break.mp3" id="4_fdugu"]
[ext_resource type="Texture2D" uid="uid://bobwlf3rui8fd" path="res://'art'/grass.png" id="4_x1jkm"]
[ext_resource type="PackedScene" uid="uid://cfx8uapxu85ej" path="res://objects/ball.tscn" id="5_kvxva"]
[ext_resource type="PackedScene" uid="uid://c64vthk38uwv" path="res://objects/ballInGoal.tscn" id="6_epk0g"]
[ext_resource type="AudioStream" uid="uid://b32vxgkjwcky6" path="res://audio/snip.mp3" id="7_0plyx"]
[ext_resource type="PackedScene" uid="uid://b1hya8pqc8xu8" path="res://objects/spike.tscn" id="9_8nscl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsokl"]
size = Vector2(1152, 1160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgxra"]
size = Vector2(2928, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trnux"]
size = Vector2(130, 1162)

[node name="Stage 8" type="Node2D"]
script = ExtResource("1_3deuf")
spike_scene = ExtResource("9_8nscl")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 1152.0
texture = ExtResource("3_sk4ja")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_top = -648.0
offset_right = 1152.0
texture = ExtResource("4_x1jkm")

[node name="Area2D" type="Area2D" parent="."]
gravity_space_override = 3
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(576, 580)
shape = SubResource("RectangleShape2D_wsokl")

[node name="Area2D2" type="Area2D" parent="."]
gravity_space_override = 3
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(560, 1240)
shape = SubResource("RectangleShape2D_pgxra")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-200, 584)
shape = SubResource("RectangleShape2D_trnux")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(1344, 580)
shape = SubResource("RectangleShape2D_trnux")

[node name="goal" parent="." instance=ExtResource("3_w1hoc")]
position = Vector2(578, 0)

[node name="break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fdugu")

[node name="Ball" parent="." instance=ExtResource("5_kvxva")]
position = Vector2(578, 1024)
gravity_scale = 0.0

[node name="Camera2D" type="Camera2D" parent="Ball"]
offset = Vector2(0, -200)

[node name="Label" type="Label" parent="Ball"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 96.0
offset_right = 82.0
offset_bottom = 120.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Press SPACE to hop!"

[node name="ballInGoal" parent="." instance=ExtResource("6_epk0g")]
visible = false
position = Vector2(578, 0)

[node name="Camera2D" type="Camera2D" parent="ballInGoal"]
visible = false
offset = Vector2(0, -200)

[node name="snip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0plyx")

[node name="Track 1" type="Timer" parent="."]
wait_time = 1.2

[node name="Track 2" type="Timer" parent="."]
wait_time = 2.0

[node name="Track 3" type="Timer" parent="."]

[node name="Track 4" type="Timer" parent="."]
wait_time = 1.4

[node name="Track 5" type="Timer" parent="."]
wait_time = 1.4

[node name="Track 6" type="Timer" parent="."]
wait_time = 2.4

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="ballInGoal" from="goal" to="." method="_on_goal_ball_in_goal"]
[connection signal="ball_destroyed" from="Ball" to="." method="_on_ball_ball_destroyed"]
[connection signal="goNext" from="ballInGoal" to="." method="_on_ball_in_goal_go_next"]
[connection signal="timeout" from="Track 1" to="." method="_on_track_1_timeout"]
[connection signal="timeout" from="Track 2" to="." method="_on_track_2_timeout"]
[connection signal="timeout" from="Track 3" to="." method="_on_track_3_timeout"]
[connection signal="timeout" from="Track 4" to="." method="_on_track_4_timeout"]
[connection signal="timeout" from="Track 5" to="." method="_on_track_5_timeout"]
[connection signal="timeout" from="Track 6" to="." method="_on_track_6_timeout"]
